--- a/packages/intents/leave_home.yaml
+++ b/packages/intents/leave_home.yaml
@@ -5,10 +5,12 @@ conversation:
 
 intent_script:
   LeaveHome:
-    description: "Launch the leave home script. To be used when I am about to leave my home."
-    action:
-      - service: script.leave_home
+    description: "Set the home mode to LEAVING. To be used when I am about to leave my home."
+    actions:
+      - action: input_select.select_option
         data:
-          calling_location: home
+          option: Départ en cours
+        target:
+          entity_id: input_select.modes_de_presence_de_la_maison_v2
     speech:
       text: "Done"
