--- a/scripts.yaml
+++ b/scripts.yaml
@@ -25,142 +25,8 @@ leave_home:
       target:
         entity_id: cover.living_room_cover
     alias: Close shutters
-  - if:
-    - condition: state
-      entity_id: binary_sensor.all_windows
-      state: 'on'
-    then:
-    - variables:
-        open_windows: "{{ \n  expand(states.binary_sensor.all_windows.attributes.entity_id)\n
-          \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
-          \n    | list\n    | join(\", \")\n}}"
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "️\U0001F6AA Fenêtre(s) ouverte(s) !"
-        message: 'Les fenêtres suivantes sont toujours ouvertes alors que personne
-          n''est présent: {{open_windows}}'
-        click_url: /lovelace/openings
-        tag: home_empty_window_open
-        until:
-        - entity_id: input_select.mode_de_presence_de_la_maison
-          new_state: Occupée
-        - entity_id: binary_sensor.all_windows
-          new_state: 'off'
-    alias: Notify windows open
-  - if:
-    - condition: state
-      entity_id: binary_sensor.is_oven_running
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "\U0001F958 Four allumé !"
-        message: Le four est en marche alors que personne n'est présent!
-        tag: home_empty_oven_on
-        interuption_level: critical
-        until:
-        - entity_id: input_select.mode_de_presence_de_la_maison
-          new_state: Occupée
-        - entity_id: binary_sensor.is_oven_running
-          new_state: 'off'
-    alias: Notify oven running
-  - if:
-    - condition: state
-      entity_id: binary_sensor.is_induction_cooktop_running
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "\U0001F373 Plaques à induction allumé !"
-        message: Les plaques à induction sont en marche alors que personne n'est présent!
-        tag: home_empty_induction_cooktop_on
-        interuption_level: critical
-        until:
-        - entity_id: input_select.mode_de_presence_de_la_maison
-          new_state: Occupée
-        - entity_id: binary_sensor.is_induction_cooktop_running
-          new_state: 'off'
-    alias: Notify cooktop running
-  - choose:
-    - conditions:
-      - condition: template
-        value_template: '{{calling_location == "home"}}'
-      sequence:
-      - if:
-        - condition: state
-          entity_id: binary_sensor.all_doors
-          state: 'on'
-        then:
-        - variables:
-            open_doors: "{{ \n  expand(states.binary_sensor.all_doors.attributes.entity_id)\n
-              \   | selectattr('state', 'eq', 'on')        \n    | rejectattr('entity_id',
-              'eq', 'binary_sensor.capteur_ouverture_porte_entree')\n    | map(attribute='attributes.friendly_name')
-              \n    | list\n    | join(\", \")\n}}"
-        - if:
-          - condition: template
-            value_template: '{{open_doors != ""}}'
-          then:
-          - event: NOTIFIER
-            event_data:
-              action: send_to_nearest
-              title: "️\U0001F6AA Porte(s) ouverte(s) !"
-              message: 'Les portes suivantes sont toujours ouvertes alors que personne
-                n''est présent:  {{open_doors}}'
-              click_url: /lovelace/openings
-              tag: home_empty_door_open
-              until:
-              - entity_id: input_select.mode_de_presence_de_la_maison
-                new_state: Occupée
-              - entity_id: binary_sensor.all_doors
-                new_state: 'off'
-        alias: Notify doors open
-      - action: automation.trigger
-        metadata: {}
-        data:
-          skip_condition: true
-        target:
-          entity_id: automation.take_out_trash_on_arrival
-      alias: Called form home
-    default:
-    - if:
-      - condition: state
-        entity_id: binary_sensor.all_doors
-        state: 'on'
-      then:
-      - variables:
-          open_doors: "{{ \n  expand(states.binary_sensor.all_doors.attributes.entity_id)\n
-            \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
-            \n    | list\n    | join(\", \")\n}}"
-      - event: NOTIFIER
-        event_data:
-          action: send_to_nearest
-          title: "️\U0001F6AA Porte(s) ouverte(s) !"
-          message: 'Les portes suivantes sont toujours ouvertes alors que personne
-            n''est présent:  {{open_doors}}'
-          click_url: /lovelace/openings
-          tag: home_empty_door_open
-          until:
-          - entity_id: input_select.mode_de_presence_de_la_maison
-            new_state: Occupée
-          - entity_id: binary_sensor.all_doors
-            new_state: 'off'
-      alias: Notify doors open
   icon: mdi:home-export-outline
-  fields:
-    calling_location:
-      selector:
-        select:
-          options:
-          - label: Présent
-            value: home
-          - label: Absent
-            value: not_home
-      name: Emplacement
-      description: Emplacement lors de l'appel de script
-      required: true
+  fields: {}
 welcome_home:
   alias: Bienvenue a la maison
   mode: queued
@@ -672,3 +538,92 @@ transfer_music_music_assistant:
       name: Source location of the music stream (Currently playing)
   description: ''
   icon: mdi:account-music
+preparer_depart_maison:
+  alias: Préparer départ maison
+  sequence:
+  - alias: Notify windows open
+    if:
+    - condition: state
+      entity_id: binary_sensor.all_windows
+      state: 'on'
+    then:
+    - variables:
+        open_windows: "{{ \n  expand(states.binary_sensor.all_windows.attributes.entity_id)\n
+          \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
+          \n    | list\n    | join(\", \")\n}}"
+    - event: NOTIFIER
+      event_data:
+        action: send_to_nearest
+        title: "️\U0001F6AA Fenêtre(s) ouverte(s) !"
+        message: 'Les fenêtres suivantes sont toujours ouvertes alors que personne
+          n''est présent: {{open_windows}}'
+        click_url: /lovelace/openings
+        tag: home_empty_window_open
+        until:
+        - entity_id: input_select.modes_de_presence_de_la_maison_v2
+          new_state: Occupée
+        - entity_id: binary_sensor.all_windows
+          new_state: 'off'
+  - alias: Notify oven running
+    if:
+    - condition: state
+      entity_id: binary_sensor.is_oven_running
+      state: 'on'
+    then:
+    - event: NOTIFIER
+      event_data:
+        action: send_to_nearest
+        title: "\U0001F958 Four allumé !"
+        message: Le four est en marche alors que personne n'est présent!
+        tag: home_empty_oven_on
+        interuption_level: critical
+        until:
+        - entity_id: input_select.modes_de_presence_de_la_maison_v2
+          new_state: Occupée
+        - entity_id: binary_sensor.is_oven_running
+          new_state: 'off'
+  - alias: Notify cooktop running
+    if:
+    - condition: state
+      entity_id: binary_sensor.is_induction_cooktop_running
+      state: 'on'
+    then:
+    - event: NOTIFIER
+      event_data:
+        action: send_to_nearest
+        title: "\U0001F373 Plaques à induction allumé !"
+        message: Les plaques à induction sont en marche alors que personne n'est présent!
+        tag: home_empty_induction_cooktop_on
+        interuption_level: critical
+        until:
+        - entity_id: input_select.modes_de_presence_de_la_maison_v2
+          new_state: Occupée
+        - entity_id: binary_sensor.is_induction_cooktop_running
+          new_state: 'off'
+  - alias: Notify doors open
+    if:
+    - condition: state
+      entity_id: binary_sensor.all_doors
+      state: 'on'
+    then:
+    - variables:
+        open_doors: "{{ \n  expand(states.binary_sensor.all_doors.attributes.entity_id)\n
+          \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
+          \n    | list\n    | join(\", \")\n}}"
+    - event: NOTIFIER
+      event_data:
+        action: send_to_nearest
+        title: "️\U0001F6AA Porte(s) ouverte(s) !"
+        message: 'Les portes suivantes sont toujours ouvertes alors que personne n''est
+          présent:  {{open_doors}}'
+        click_url: /lovelace/openings
+        tag: home_empty_door_open
+        until:
+        - entity_id: input_select.modes_de_presence_de_la_maison_v2
+          new_state: Occupée
+        - entity_id: binary_sensor.all_doors
+          new_state: 'off'
+  mode: queued
+  icon: mdi:home-export-outline
+  fields: {}
+  description: ''
