--- a/automations.yaml
+++ b/automations.yaml
@@ -4205,9 +4205,17 @@
   - trigger: state
     entity_id:
     - input_boolean.courrier_a_relever
+    id: mail
   - trigger: state
     entity_id:
     - input_select.modes_de_presence_de_la_maison_v2
+    to: Départ en cours
+    id: arriving_leaving
+  - trigger: state
+    entity_id:
+    - input_select.modes_de_presence_de_la_maison_v2
+    to: Arrivée en cours
+    id: arriving_leaving
   conditions:
   - condition: state
     entity_id: input_boolean.automation_monitor_mailbox
@@ -4219,19 +4227,49 @@
     entity_id: input_select.modes_de_presence_de_la_maison_v2
     state: Occupée
   actions:
-  - event: NOTIFIER
-    event_data:
-      action: send_to_present
-      title: "\U0001F4EC  Boite aux lettres"
-      message: Vous avez du courrier !
-      tag: you_got_mail
-      callback:
-      - title: Courrier relevé
-        event: mail_picked_up
-        icon: sfsymbols:checkmark.circle.fill
-      until:
-      - entity_id: input_boolean.courrier_a_relever
-        new_state: 'off'
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - mail
+      - condition: state
+        entity_id: input_select.modes_de_presence_de_la_maison_v2
+        state: Occupée
+      sequence:
+      - event: NOTIFIER
+        event_data:
+          action: send_to_present
+          title: "\U0001F4EC  Boite aux lettres"
+          message: Vous avez du courrier !
+          tag: you_got_mail
+          callback:
+          - title: Courrier relevé
+            event: mail_picked_up
+            icon: sfsymbols:checkmark.circle.fill
+          until:
+          - entity_id: input_boolean.courrier_a_relever
+            new_state: 'off'
+    - conditions:
+      - condition: trigger
+        id:
+        - arriving_leaving
+      - condition: state
+        entity_id: input_boolean.courrier_a_relever
+        state: 'on'
+      sequence:
+      - event: NOTIFIER
+        event_data:
+          action: send_to_present
+          title: "\U0001F4EC  Boite aux lettres"
+          message: Vous avez du courrier !
+          tag: you_got_mail
+          callback:
+          - title: Courrier relevé
+            event: mail_picked_up
+            icon: sfsymbols:checkmark.circle.fill
+          until:
+          - entity_id: input_boolean.courrier_a_relever
+            new_state: 'off'
   mode: single
 - id: '1728147111105'
   alias: "Machine a Laver Intelligente - \U0001F514 Notifier"
